<resources>
    <string name="app_name">Locadora</string>

    <string name="action_settings">Settings</string>
    <string name="label_automovel_modelo">Modelo</string>
    <string name="label_automovel_fabricante">Fabricante</string>
    <string name="label_automovel_tarifaLivre">Tarifa Livre</string>
    <string name="label_automovel_controladoInicial">Controlado Inicial</string>
    <string name="label_automovel_controladoKm">Controlado KM</string>
    <string name="label_automovel_cidade">Cidades: </string>
    <string name="botao_enviar">Consultar</string>


    <string-array name="cidades">

        <item>Escolha a cidade</item>
        <item>São Paulo</item>
        <item>Rio de janeiro</item>
        <item>Recife</item>
        <item>Salvador</item>
        <item>Belo Horizonte</item>
        <item>Porto Alegre</item>
    </string-array>


    <string name="title_activity_lista_automovel">Lista de automoveis</string>

    <string name="title_activity_detalhe_automovel">Detalhes do automovel</string>
    <string name="label_tarifa_controladoKm">Tarifa de Km controlado</string>
</resources>
